--- a/astir/astir.vcxproj
+++ b/astir/astir.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AFA.cpp" />
     <ClCompile Include="CppGenerationVisitor.cpp" />
     <ClCompile Include="CppLLkParserGenerator.cpp" />
     <ClCompile Include="CppLLkParserGenerator.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AFA.h" />
     <ClInclude Include="CharType.h" />
     <ClInclude Include="CppGenerationVisitor.h" />
     <ClInclude Include="CppNFAGenerationHelper.h" />
